--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body.night {
     font-size: 40px;
     padding: 8px;
     cursor: pointer;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
 }
 #globe {
     font-size: 40px;
     padding: 8px;
     cursor: pointer;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
 }
 /*end of icons design*/
 /*Start of Home design*/
@@ -109,7 +109,7 @@ body.night {
 }
 .home h1 {
     font-size: 50px;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
     letter-spacing: 1px;
 }
 .home-h {
@@ -118,13 +118,13 @@ body.night {
     padding: 5px 30px;
     font-weight: 800;
     font-size: 28px;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
 }
 .home-p {
     text-align: end;
     padding: 30px;  
     max-width: fit-content;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
     font-size: 18px;
     font-weight: 500;
     letter-spacing: 1px;
@@ -143,17 +143,22 @@ body.night {
     padding-top: 150px;
     display: flex;
     font-size: 40px;
-    color: var(--main-color-1);
+    color: var(--main-color-2);
     letter-spacing: 1px;
     justify-content: center;
 }
 .cont img {
     width: 100%;
-
+    border-radius: 10px;
+}
+.cont .img2 {
+    width: 170;
+    height: 170;
+    border-radius: 10px;
 }
 .card1 {
     width: 350px;
-    height: 580px;
+    height: 540px;
     background-color: var(--card-bg-color);
     margin-left: 50px;
     padding: 30px;
